# revshells

./: .gitignore  README.md  pyproject.toml  revshells.py
assets/: listeners.json  payload_encoders.json  shell__meta.json  shell_bind.json  shell_hoaxshell.json  shell_msfvenom.json  shells.json
components/: ListLanguages.py  Listener.py  ListenerIPAndPort.py  PayloadArea.py
dependency/: install.sh
src/revshells/: main.py
src/revshells/assets/: install_clipboard_deps.sh  listeners_default_context.json  shell_hoaxshell.json  shell_msfvenom.json  shell_reverse.json
src/revshells/components/: ListLanguages.py  Listener.py  ListenerIPAndPort.py  PayloadArea.py  ShellTypes.py
src/revshells/styles/: ListLanguages.tcss  Listener.tcss
src/revshells/utils/: copy_to_clipboard.py  get_interfaces.py  get_ip.py  substitute.py
styles/: Listener.tcss  ListenerIPAndPort.tcss  PayloadArea.tcss  revshells.tcss
utils/: encode_to.py  get_ip.py  substitute.py
