[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "revshells"
version = "0.1.0"
description = "TUI tool for generating reverse shell payloads"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=8.2,<9",
]

[project.scripts]
revshells = "revshells.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
revshells = ["styles/*.tcss", "assets/*"]